Fixed spacing

--- a/style/contact.scss
+++ b/style/contact.scss
@@ -212,6 +212,10 @@ nav{
         text-align: center;
     }
 
+    .captcha{
+        margin-left: 20px;
+    }
+
     .burger{
         display: block;
     }
